# renpy-translator-rust

./: Cargo.toml  key.txt
src/: client.rs  lib.rs  main.rs  neu.rs  parser.rs
src/helpers/: files.rs
src/tests/: basic_renpy_text.txt  multiple_text_per_row.txt  no_renpy.txt  no_russia.txt  renpy_500.txt  renpy_complete.txt  renpy_tags.txt  renpy_tags_html.txt  russia_space.txt
src/translation/: cli.rs  mod.rs  translator.rs
src/translation/translated_files/: translated.txt
