[package]
name = "text_translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
color-eyre = "0.6.2"
curl = "0.4.44"
env_logger = "0.10.0"
features = "0.10.0"
futures = "0.3.28"
itertools = "0.11.0"
json = "0.12.4"
log = "0.4.19"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
tokio = { version = "1", features = ["full"] }
nom = "7.1.3"
